# ai-career-agent-backend

./: .dockerignore  .env.example  Dockerfile  README.md  celery_app.py  docker-compose.yml  main.py  mcp_server.py  pyproject.toml
agents/: career_graph.py
agents/career/: state_policy.py  trace.py  trace_summary.py
app/constants/: workflow_status.py
app/database/: database.py  init_db.py
config/: logging.py  settings.py
constants/: workflow_status.py
database/: init_db.py
database/migrations/: 001_add_agent_step_token_fields.py  002_alter_agent_run_input_summary_field.py  003_add_workflow_checkpoint_version.py  004_add_agent_runs_fields.py  run_migrations.py
database/models/: agent_run.py  agent_step.py  human_confirmation.py  tool_call.py  user_memories.py  (+1 more)
exceptions/: workflow_exceptions.py
llms/: llm_client.py
prompts/: career_prompts.py
routers/: career_agent_router.py
schemas/: confirm_schema.py  jd_schema.py  match_schema.py  query_schema.py  react_decision.py  reflection_schema.py  resume_schema.py
scripts/: requeue_stuck_workflows.py
services/: agent_run_query_service.py  agent_trace_service.py  career_analysis_service.py  checkpoint_runtime.py  confirmation_service.py  long_term_memory_service.py  memory_service.py  redis_service.py  session_memory_service.py  token_usage_service.py  workflow_checkpoint_service.py  workflow_runtime_service.py  workflow_state_service.py
tasks/: career_analysis_task.py
tools/: __init__.py  career_tools.py  mcp_tools.py  rag_evidence_tool.py  tool_executor.py  tool_registry.py
(+14 files in other folders)
